<resources>
    <string name="app_name">Doce Momento</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">First Name, Last Name</string>
    <string name="nav_header_subtitle">user.email@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_cupons">Cupons</string>
    <string name="menu_confeitaria">Confeitaria</string>
    <string name="menu_produtos">Produtos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="title_activity_login">Doce Momento</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_register">Criar Conta</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bem vindo !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">A senha deve ter mais de 5 charches</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
</resources>
