<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cupon"
            android:icon="@drawable/ic_cupon_black_24dp"
            android:title="@string/menu_cupons" />
        <item
            android:id="@+id/nav_confeitaria"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/menu_confeitaria" />
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_cake_black_24dp"
            android:title="@string/menu_produtos" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_perfil" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_signout_black_24dp"
                android:title="@string/action_sign_out" />
    </group>

</menu>
